--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -31,6 +31,7 @@
                     <input class="user-input" id="login-email" type="email" placeholder="Enter Email" required><br>
                     <input class="user-input" id="login-password" type="password" placeholder="Enter Password" required><br>
                     <button class="login-signup-submit" id="login-submit">Submit</button>
+                    <!-- <p id="forgot-password" style="color: blue;text-decoration: underline;cursor: pointer;">Forgot Password!!</p> -->
                     <p class="login-signup-text" id="login-text">New Customer?SignUp</p>
                 </div>
             </div>
