--- a/Views/seller-admin.ejs
+++ b/Views/seller-admin.ejs
@@ -9,7 +9,7 @@
     <div class="header">
         <h1 class="company-name">Healthifyy</h1>
         <div class="buttons-div">
-            <button class="header_buttons">Orders Completed</button>
+            <button id="orders_completed" class="header_buttons">Orders Completed</button>
             <button class="header_buttons" id="sellerlogout">Logout as Seller</button>
         </div>
     </div>
